<resources>
    <string name="app_name">Dukaan</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="brand_icon">Brand Icon</string>
    <string name="splash_screen_background">Splash screen Background</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="abc_21">abc@#21</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_your_mail_id">Enter your Email Id</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wick">wick</string>
    <string name="last_name">Last name</string>
    <string name="john">John</string>
    <string name="first_name">First name</string>
    <string name="create_an_account">Create an Account</string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_success">You are registered Successfully</string>

    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="rb_lbl_other">OTHER</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
</resources>