<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.example.android.dukaan.activities.utils.MSPTextViewBold
            android:id="@+id/tv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_textSize"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                style="@style/loginScreenDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:fontFamily="@font/allerta"
                android:hint="@string/john"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/loginScreenDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/allerta"
                android:hint="@string/wick"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/loginScreenDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_mail_id" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:fontFamily="@font/allerta"
                android:hint="@string/abc_gmail_com"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/loginScreenDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_password" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:fontFamily="@font/allerta"
                android:hint="@string/abc_21"
                android:inputType="textPassword" />

            <TextView
                style="@style/loginScreenDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/et_rePw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:fontFamily="@font/allerta"
                android:hint="@string/abc_21"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tcChqBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:drawablePadding="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/i_agree_to_the_terms_and_conditions"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_register"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>