<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_splash_background"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/img_splash_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/splash_screen_background" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/img_splash_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_dukaan_brand"
                    android:contentDescription="@string/brand_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
            <TextView
                android:fontFamily="@font/allerta"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginVertical="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_textSize"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_mail_id"
                style="@style/loginScreenDesc"/>
            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/abc_gmail_com"
                android:fontFamily="@font/allerta"
                android:autofillHints="" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_password"
                style="@style/loginScreenDesc"/>
            <EditText
                android:id="@+id/et_pw"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/abc_21"
                android:fontFamily="@font/allerta"
                android:autofillHints="" />
            <TextView
                android:id="@+id/tv_ForgotPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:paddingHorizontal="15dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                style="@style/button"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/don_t_have_an_account"/>
                <TextView
                    android:id="@+id/tv_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/register"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>